chore: fix alignment of icon inside wishlist button on single product

--- a/assets/scss/woocommerce/_product.scss
+++ b/assets/scss/woocommerce/_product.scss
@@ -80,6 +80,8 @@
 }
 
 .nv-wl-product-wrap .add-to-wl {
+  display: flex;
+  align-items: center;
   padding: 8px 12px;
 }
 
